cmake_minimum_required (VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fgnu89-inline -g -Wall -Wno-unused-variable")

include_directories("./include/")
add_subdirectory(bmp)
add_subdirectory(control)
add_subdirectory(gdi)
add_subdirectory(hdc)
add_subdirectory(ial)
add_subdirectory(ime)
add_subdirectory(lguicore)

add_executable(lgui lgui.c)
target_link_libraries(lgui lguicore)
target_link_libraries(lgui bmp)
target_link_libraries(lgui control)
target_link_libraries(lgui gdi)
target_link_libraries(lgui hdc)
target_link_libraries(lgui ial)
target_link_libraries(lgui ime)
target_link_libraries(lgui c)
target_link_libraries(lgui m)
target_link_libraries(lgui pthread)
